# mkdocs-awesome-pages-plugin

./: .flake8  .gitignore  .travis.yml  CONTRIBUTING.md  Dockerfile  README.md  action.sh  action.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml  tests.yml
mkdocs_awesome_pages_plugin/: __init__.py  arrange.py  factory.py  markdown.py  meta.py  navigation.py  options.py  page.py  pagesfile.py  plugin.py  utils.py
mkdocs_awesome_pages_plugin/tests/: file_mock.py  test_arrange.py  test_factory.py  test_markdown.py  test_meta.py  test_page.py  test_pagesfile.py
mkdocs_awesome_pages_plugin/tests/e2e/: base.py  test_arrange.py  test_collapse.py  test_gen_files.py  test_hide.py  test_mkdocs_nav.py  test_nav.py  test_order.py  test_order_and_sort.py  test_title.py
mkdocs_awesome_pages_plugin/tests/navigation/: base.py  test_arrange.py  test_collapse.py  test_hide.py  test_meta.py  test_nav.py  test_order.py  test_order_and_sort.py  test_static.py  test_title.py
