[tool.poetry]
name = "mkdocs-awesome-pages-plugin"
version = "2.10.1"
description = "An MkDocs plugin that simplifies configuring page titles and their order"
authors = ["Lukas Geiter <info@lukasgeiter.com>"]
repository = "https://github.com/lukasgeiter/mkdocs-awesome-pages-plugin/"
readme = "README.md"
license = "MIT"
keywords = ["mkdocs", "python", "markdown", "wiki"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology"
]
exclude = ["mkdocs_awesome_pages_plugin/tests"]

[tool.poetry.plugins."mkdocs.plugins"]
awesome-pages = "mkdocs_awesome_pages_plugin.plugin:AwesomePagesPlugin"

[tool.poetry.dependencies]
python = ">=3.8.1"
mkdocs = ">=1"
wcmatch = ">=7"
natsort = ">=8.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
beautifulsoup4 = "^4.12.3"
mock-open = "^1.4.0"
black = { extras = ["d"], version = "^24.2.0" }
isort = "^5.13.2"
flake8 = "^7.0.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
